--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
 <section id="customer-sec" class="fonts">
         <div class="container-fluid searchBarParent">
             <div class="input-group mb-3 searchBar"><!-- -->
-                <input type="text" class="searchInputField form-control" placeholder="Search Customer" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input id="inputSearch" type="text" class="searchInputField form-control" placeholder="Search Customer" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addonC">Search</button><!-- -->
             </div>
         </div>
@@ -1092,7 +1092,7 @@
 <section id ="store-sec">
     <div class="container-fluid searchBarParent">
         <div class="input-group mb-3 searchBar">
-            <input type="text" class="searchInputField form-control" placeholder="Search Item" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input id="storeSearch" type="text" class="searchInputField form-control" placeholder="Search Item" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
         </div>
     </div>
@@ -1378,7 +1378,7 @@
 
     <div class="container-fluid searchBarParent">
         <div class="searchBar input-group mb-3">
-            <input type="text" class="searchInputField form-control" placeholder="Search Order" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input id="dashStore" type="text" class="searchInputField form-control" placeholder="Search Order" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2 ">Search</button>
         </div>
     </div>
