--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
                     <div class="row">
                         <div class="col-12 margin-bottom">
                             <label for="itemCode" class="margin-left-0 form-label">Item Code :</label>
-                            <input type="text" id="itemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                            <input type="text" id="itemCode" class="margin-left-0 form-control inputFieldMargin" placeholder="item code" aria-label="item name">
                         </div>
                         <div class="col-12 margin-bottom">
                             <label for="itemName" class="margin-left-0 form-label inputFieldMargin">Item Name :</label>
@@ -1150,11 +1150,11 @@
                     <div class="row">
                         <div class="col-12 margin-bottom">
                             <label for="inputQTY" class="margin-left-0 form-label ">QTY On Hand :</label>
-                            <input type="text" id="inputQTY" class="margin-left-0 form-control" placeholder="select city" aria-label="City">
+                            <input type="text" id="inputQTY" class="margin-left-0 form-control" placeholder="qty on hand" aria-label="City">
                         </div>
                         <div class="col-12 margin-bottom">
                             <label for="unitPrice" class="margin-left-0 form-label inputFieldMargin">Unit Price :</label>
-                            <input type="text" id="unitPrice" class="margin-left-0 form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                            <input type="text" id="unitPrice" class="margin-left-0 form-control inputFieldMargin" placeholder="unit price" aria-label="telephone">
                         </div>
                     </div>
                 </div>
