--- a/file/forgetPassword.html
+++ b/file/forgetPassword.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>forget password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/stylesheet/loginCSSFile.css">
-    <link rel="stylesheet" href="assets/stylesheet/signupPage.css">
-    <link rel="stylesheet" href="assets/stylesheet/forgetPassword.css">
+    <link rel="stylesheet" href="../assets/stylesheet/loginCSSFile.css">
+    <link rel="stylesheet" href="../assets/stylesheet/signupPage.css">
+    <link rel="stylesheet" href="../assets/stylesheet/forgetPassword.css">
 
     <style>
 
@@ -148,7 +148,7 @@
 <section>
     <div id="parent" class="col-6">
         <div id="imageParent" class="col-6">
-            <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
+            <img class="loginImage" src="../assets/image/loginPage.jpg" alt="shop image" title="shop image">
             <h2 id="text" class="rise-text">High Quality Goods</h2>
         </div>
     </div>
@@ -158,7 +158,7 @@
         </div>
 
         <div id="logoParent">
-            <img id="logo" src="assets/image/logo.png" alt="logo" title="GroStore.lk">
+            <img id="logo" src="../assets/image/logo.png" alt="logo" title="GroStore.lk">
         </div>
 
         <div id="forgetPasswordLabel">
