--- a/file/loginPage.html
+++ b/file/loginPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>login page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/stylesheet/loginCSSFile.css">
+    <link rel="stylesheet" href="../assets/stylesheet/loginCSSFile.css">
 
     <style>
 
@@ -244,7 +244,7 @@
     <section>
         <div id="parent" class="col-6">
             <div id="imageParent" class="col-6">
-                <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
+                <img class="loginImage" src="../assets/image/loginPage.jpg" alt="shop image" title="shop image">
                 <h2 id="text" class="rise-text">High Quality Goods</h2>
             </div>
         </div>
@@ -255,7 +255,7 @@
             </div>
 
             <div id="logoParent">
-                <img id="logo" src="assets/image/logo.png" alt="logo" title="GroStore.lk">
+                <img id="logo" src="../assets/image/logo.png" alt="logo" title="GroStore.lk">
             </div>
 
             <div id="loginLabel">
@@ -276,7 +276,7 @@
             </div>
 
             <div id="loginBtnParent">
-                <a href="index.html"> <button type="button" id="loginBtn" class="btn btn-primary btn-size">Login</button></a>
+                <a href="../index.html"> <button type="button" id="loginBtn" class="btn btn-primary btn-size">Login</button></a>
             </div>
         </div>
     </section>
