--- a/index.html
+++ b/index.html
@@ -925,11 +925,11 @@
 
                             <ul id="dropdownList" class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                                 <li><img id="dropdownImage" src="assets/image/profile.jpg" class="dropdown-item"></li>
-                                <li id="" class="textAlignCenter"><a class="dropdown-item logout" href="loginPage.html">Logout</a></li>
+                                <li id="" class="textAlignCenter"><a class="dropdown-item logout" href="file/loginPage.html">Logout</a></li>
                                 <li><a class="dropdown-item profileDetail">Ramesh Layan</a></li>
                                 <li><a class="dropdown-item profileDetail">Beruwala</a></li>
                                 <li><a class="dropdown-item profileDetail">075 798 0223</a></li>
-                                <li class="textAlignCenter"><a class="dropdown-item signup" href="signupPage.html">Sign Up</a></li>
+                                <li class="textAlignCenter"><a class="dropdown-item signup" href="file/signupPage.html">Sign Up</a></li>
                             </ul>
                         </div>
                     </div>
