refactor error msg

--- a/index.html
+++ b/index.html
@@ -1039,14 +1039,14 @@
                             <label for="-inputCustomerId" class="form-label">Customer ID</label>
                             <input type="text" class="form-control" id="-inputCustomerId" required>
                             <div class="invalid-feedback">
-                                Please provide a valid name.
+                                customer ID is a required field : Pattern C001.
                             </div>
                         </div>
                         <div class="col-md-12">
                             <label for="_inputCustomerName" class="form-label">Customer Name</label>
                             <input type="text" class="form-control" id="_inputCustomerName" required>
                             <div class="invalid-feedback">
-                                Please provide a valid address.
+                                customer name is a required field : Minimum 5, Max 20,Space Allowed.
                             </div>
                         </div>
 
@@ -1054,7 +1054,7 @@
                             <label for="inputCityC" class="form-label">City</label>
                             <input type="text" class="form-control" id="inputCityC" required>
                             <div class="invalid-feedback">
-                                Please provide a valid city.
+                                Please enter your city.
                             </div>
                         </div>
 
@@ -1062,13 +1062,12 @@
                             <label for="inputTelephoneC" class="form-label">Telephone</label>
                             <input type="text" class="form-control" id="inputTelephoneC" required>
                             <div class="invalid-feedback">
-                                Please provide a valid number.
+                                Please enter your mobile number
                             </div>
                         </div>
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                            <!--                <button id="submitC" type="button" class="btn btn-primary saveChanges">Save changes</button>-->
                             <button id="submitC" class="btn btn-primary saveChanges" type="button">Submit form</button>
                         </div>
                     </form>
