--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                         <div class="col-md-12">
                             <label for="_inputCustomerName" class="form-label">Customer Name</label>
                             <input type="text" class="form-control" id="_inputCustomerName" required>
-                            <div class="invalid-feedback">
+                            <div id="c-name" class="invalid-feedback">
                                 customer name is a required field : Minimum 5, Max 20,Space Allowed.
                             </div>
                         </div>
