--- a/index.html
+++ b/index.html
@@ -999,15 +999,15 @@
                             <label for="_inputCustomerName" class="form-label">Customer Name</label>
                             <input type="text" class="form-control" id="_inputCustomerName" required>
                             <div id="c-name" class="invalid-feedback">
-                                customer name is a required field : Minimum 5, Max 20,Space Allowed.
+                                Minimum 5, Max 20,Space Allowed and input only English letters.
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <label for="inputCityC" class="form-label">City</label>
                             <input type="text" class="form-control" id="inputCityC" required>
-                            <div class="invalid-feedback">
-                                Please enter your city.
+                            <div id="c-city" class="invalid-feedback">
+                                Max 25 letters and input only English letters,.
                             </div>
                         </div>
 
