tel error msg id and refactor error msg

--- a/index.html
+++ b/index.html
@@ -1007,15 +1007,15 @@
                             <label for="inputCityC" class="form-label">City</label>
                             <input type="text" class="form-control" id="inputCityC" required>
                             <div id="c-city" class="invalid-feedback">
-                                Max 25 letters and input only English letters,.
+                                Max 25 letters and input only English letters.
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <label for="inputTelephoneC" class="form-label">Telephone</label>
                             <input type="text" class="form-control" id="inputTelephoneC" required>
-                            <div class="invalid-feedback">
-                                Please enter your mobile number
+                            <div id="c-tel" class="invalid-feedback">
+                                Please enter valid mobile number.Space Not Allowed,Max 10.
                             </div>
                         </div>
 
